// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotesPage matches snapshot 1`] = `
<div>
  <div
    class="sc-fznZeY rPRBP"
  >
    <h1
      class="sc-fzokOt gEFtxJ"
    >
      Notes
    </h1>
    <div
      class="sc-fzqBZW bqqVlM"
    >
      <div
        class="sc-fzqNJr gVufqP"
      >
        <div
          class="sc-fzoyAV cwAuFN"
        >
          All
          <svg>
            chevron.svg
          </svg>
        </div>
        <h3
          class="sc-fzoLag fSFvQg"
        >
          5
        </h3>
      </div>
      <div
        class="sc-fzoXzr bMMYON"
      >
        <svg
          class="settings-icon"
        >
          settings.svg
        </svg>
        <div
          class="sc-AxjAm bgluyb"
        >
          <h2
            class="sc-AxiKw jzoYkp"
          >
            Settings
          </h2>
          <div
            class="sc-AxhCb iGvJwE"
          >
            <div
              class="sc-AxgMl ibGeUx"
            >
              <label
                class="sc-AxheI btNIfl"
                for="sort-by"
              >
                Sort by
              </label>
              <div
                class="sc-Axmtr iPljch"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="sort-by"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="sort-by"
                    role="button"
                    tabindex="0"
                  >
                    Date
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="date"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxgMl ibGeUx"
            >
              <label
                class="sc-AxheI btNIfl"
                for="font-size"
              >
                Font size
              </label>
              <div
                class="sc-Axmtr iPljch"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="font-size"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="font-size"
                    role="button"
                    tabindex="0"
                  >
                    Medium
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="medium"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxgMl ibGeUx"
            >
              <label
                class="sc-AxheI btNIfl"
              >
                Tags
              </label>
              <span
                class="sc-fzozJi htjloa"
              >
                <svg>
                  plus.svg
                </svg>
              </span>
              <div
                class="sc-Axmtr iPljch"
              >
                Click to edit
              </div>
              <div
                class="sc-AxmLO jasIBP"
              >
                <div
                  class="sc-AxhUy gNVqIy single-tag"
                  color="#F44336"
                >
                  <span>
                    Primary
                  </span>
                </div>
                <div
                  class="sc-AxhUy bOdUof single-tag"
                  color="#E91E63"
                >
                  <span>
                    Secondary
                  </span>
                </div>
                <div
                  class="sc-AxhUy iyFkZJ single-tag"
                  color="#607D8B"
                >
                  <span>
                    Studies
                  </span>
                </div>
                <div
                  class="sc-AxhUy kVXffT single-tag"
                  color="#00BCD4"
                >
                  <span>
                    School
                  </span>
                </div>
                <div
                  class="sc-AxhUy kdVsNk single-tag"
                  color="#3F51B5"
                >
                  <span>
                    Random
                  </span>
                </div>
                <div
                  class="sc-AxhUy bpFPFb single-tag"
                  color="#9C27B0"
                >
                  <span>
                    Work
                  </span>
                </div>
                <div
                  class="sc-AxhUy byplBL single-tag"
                  color="#FF9800"
                >
                  <span>
                    Coding
                  </span>
                </div>
                <div
                  class="sc-AxhUy gXfeNz single-tag"
                  color="#4CAF50"
                >
                  <span>
                    Stuff
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-AxirZ gpexXZ"
        />
      </div>
    </div>
    <section
      class="sc-fzpjYC fwhPAY"
    >
      <a
        href="/notes/1"
      >
        <article
          class="sc-fzoLsD fKiHzN"
        >
          <div
            class="sc-fzpans eVhIQM"
          >
            <div>
              <h5
                class="sc-fzplWN ifFpiT"
              >
                Lista de compras
              </h5>
              <p
                class="sc-fznyAO eNAZql"
              >
                20 July
              </p>
            </div>
            <div
              class="sc-fznKkj iOdcne"
            >
              <div
                class="sc-AxhUy gNVqIy single-tag"
                color="#F44336"
              >
                <span>
                  Primary
                </span>
              </div>
              <div
                class="sc-AxhUy bOdUof single-tag"
                color="#E91E63"
              >
                <span>
                  Secondary
                </span>
              </div>
            </div>
          </div>
        </article>
      </a>
      <a
        href="/notes/2"
      >
        <article
          class="sc-fzoLsD fKiHzN"
        >
          <div
            class="sc-fzpans eVhIQM"
          >
            <div>
              <h5
                class="sc-fzplWN ifFpiT"
              >
                Apontamentos aula
              </h5>
              <p
                class="sc-fznyAO eNAZql"
              >
                25 June
              </p>
            </div>
            <div
              class="sc-fznKkj iOdcne"
            >
              <div
                class="sc-AxhUy iyFkZJ single-tag"
                color="#607D8B"
              >
                <span>
                  Studies
                </span>
              </div>
              <div
                class="sc-AxhUy kVXffT single-tag"
                color="#00BCD4"
              >
                <span>
                  School
                </span>
              </div>
            </div>
          </div>
        </article>
      </a>
      <a
        href="/notes/3"
      >
        <article
          class="sc-fzoLsD fKiHzN"
        >
          <div
            class="sc-fzpans eVhIQM"
          >
            <div>
              <h5
                class="sc-fzplWN ifFpiT"
              >
                Random shit
              </h5>
              <p
                class="sc-fznyAO eNAZql"
              >
                15 July
              </p>
            </div>
            <div
              class="sc-fznKkj iOdcne"
            >
              <div
                class="sc-AxhUy kdVsNk single-tag"
                color="#3F51B5"
              >
                <span>
                  Random
                </span>
              </div>
            </div>
          </div>
        </article>
      </a>
      <a
        href="/notes/4"
      >
        <article
          class="sc-fzoLsD fKiHzN"
        >
          <div
            class="sc-fzpans eVhIQM"
          >
            <div>
              <h5
                class="sc-fzplWN ifFpiT"
              >
                Work shit
              </h5>
              <p
                class="sc-fznyAO eNAZql"
              >
                15 July
              </p>
            </div>
            <div
              class="sc-fznKkj iOdcne"
            >
              <div
                class="sc-AxhUy bpFPFb single-tag"
                color="#9C27B0"
              >
                <span>
                  Work
                </span>
              </div>
              <div
                class="sc-AxhUy byplBL single-tag"
                color="#FF9800"
              >
                <span>
                  Coding
                </span>
              </div>
              <div
                class="sc-AxhUy gXfeNz single-tag"
                color="#4CAF50"
              >
                <span>
                  Stuff
                </span>
              </div>
            </div>
          </div>
        </article>
      </a>
      <a
        href="/notes/5"
      >
        <article
          class="sc-fzoLsD fKiHzN"
        >
          <div
            class="sc-fzpans eVhIQM"
          >
            <div>
              <h5
                class="sc-fzplWN ifFpiT"
              >
                Post 129
              </h5>
              <p
                class="sc-fznyAO eNAZql"
              >
                7 May
              </p>
            </div>
            <div
              class="sc-fznKkj iOdcne"
            />
          </div>
        </article>
      </a>
    </section>
  </div>
</div>
`;

exports[`NotesSettings matches snashot 1`] = `
<div>
  <svg
    class="settings-icon"
  >
    settings.svg
  </svg>
  <div
    class="sc-AxjAm bgluyb"
  >
    <h2
      class="sc-AxiKw jzoYkp"
    >
      Settings
    </h2>
    <div
      class="sc-AxhCb iGvJwE"
    >
      <div
        class="sc-AxgMl ibGeUx"
      >
        <label
          class="sc-AxheI btNIfl"
          for="sort-by"
        >
          Sort by
        </label>
        <div
          class="sc-Axmtr iPljch"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="sort-by"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="sort-by"
              role="button"
              tabindex="0"
            >
              Date
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="date"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxgMl ibGeUx"
      >
        <label
          class="sc-AxheI btNIfl"
          for="font-size"
        >
          Font size
        </label>
        <div
          class="sc-Axmtr iPljch"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="font-size"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="font-size"
              role="button"
              tabindex="0"
            >
              Medium
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="medium"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxgMl ibGeUx"
      >
        <label
          class="sc-AxheI btNIfl"
        >
          Tags
        </label>
        <span
          class="sc-fzozJi htjloa"
        >
          <svg>
            plus.svg
          </svg>
        </span>
        <div
          class="sc-Axmtr iPljch"
        >
          Click to edit
        </div>
        <div
          class="sc-AxmLO jasIBP"
        >
          <div
            class="sc-AxhUy gNVqIy single-tag"
            color="#F44336"
          >
            <span>
              Primary
            </span>
          </div>
          <div
            class="sc-AxhUy bOdUof single-tag"
            color="#E91E63"
          >
            <span>
              Secondary
            </span>
          </div>
          <div
            class="sc-AxhUy iyFkZJ single-tag"
            color="#607D8B"
          >
            <span>
              Studies
            </span>
          </div>
          <div
            class="sc-AxhUy kVXffT single-tag"
            color="#00BCD4"
          >
            <span>
              School
            </span>
          </div>
          <div
            class="sc-AxhUy kdVsNk single-tag"
            color="#3F51B5"
          >
            <span>
              Random
            </span>
          </div>
          <div
            class="sc-AxhUy bpFPFb single-tag"
            color="#9C27B0"
          >
            <span>
              Work
            </span>
          </div>
          <div
            class="sc-AxhUy byplBL single-tag"
            color="#FF9800"
          >
            <span>
              Coding
            </span>
          </div>
          <div
            class="sc-AxhUy gXfeNz single-tag"
            color="#4CAF50"
          >
            <span>
              Stuff
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-AxirZ gpexXZ"
  />
</div>
`;

exports[`SingleNote matches snapshot 1`] = `
<div>
  <article
    class="sc-fzoLsD fKiHzN"
  >
    <div
      class="sc-fzpans eVhIQM"
    >
      <div>
        <h5
          class="sc-fzplWN ifFpiT"
        >
          Lista de compras
        </h5>
        <p
          class="sc-fznyAO eNAZql"
        >
          20 July
        </p>
      </div>
      <div
        class="sc-fznKkj iOdcne"
      >
        <div
          class="sc-AxhUy gNVqIy single-tag"
          color="#F44336"
        >
          <span>
            Primary
          </span>
        </div>
        <div
          class="sc-AxhUy bOdUof single-tag"
          color="#E91E63"
        >
          <span>
            Secondary
          </span>
        </div>
      </div>
    </div>
  </article>
</div>
`;
